# volva.rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: prices.yml
src/: main.rs
src/client/: binance.rs  bitso.rs  buda.rs  coinbase.rs  common.rs  criptoya.rs  cryptocom.rs  cryptomkt.rs  ftx.rs  gateio.rs  huobi.rs  kucoin.rs  lib.rs  mod.rs  okx.rs  ripio.rs
