[package]
edition = "2021"
name = "volva"
version = "0.1.0"

[dependencies]
anyhow = {version = "1"}
async-trait = {version = "0.1.53"}
futures = {version = "0.3.21"}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
